@@ -3,6 +3,7 @@ v1.0.2
 + new method mpaa_reason() reports why the movie was rated PG-* in the USA
 + introduced new class imdb_person with methods to retrieve name, picture
   and filmographies of staff members
++ imdb_person: New method born() to retrieve birthdate and place
 
 v1.0.1 (07.05.2008)
 -------------------
